# notml

./: .travis.yml  Makefile  README.md  commonmain.c  parse.rs  runtime.rs
compiler/: Cargo.toml  config.macos.toml  config.toml  config.ubuntu.toml
compiler/src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  llvm.rs  main.rs  parser.rs  sem.rs  ssa.rs  typing.rs
compiler/tests/: io.rs  programs.rs
programs/: fact.notml  fact_tail.notml  fib.notml  fizzbuzz.notml  list.notml  seq.notml  simple
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  sem.rs
