[package]
name = "notmlc"
version = "0.1.0"
authors = ["Paweł Stiasny <pawelstiasny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "~2.33.0"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
predicates = "1.0.4"
